[package]
name = "zoovebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] } 
reqwest = "0.11.11"
dotenv = "0.15.0"
egg-mode = "0.16.0"
chrono = "0.4.22"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
preview-rs = "0.1.3"
redis = "0.21.6"